--- a/TokoFurniture.html
+++ b/TokoFurniture.html
@@ -67,7 +67,7 @@
       <div class="row justify-content-center" style="background-color: rgb(165, 136, 99);">
         <div class="col-lg-3">
           <div class="card">
-            <img src="img/furniture.jpg" class="card-img-top" alt="...">
+            <img src="furniture.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">CERMIN LILIN</h5>
               <p class="card-text">
@@ -80,7 +80,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card">
-            <img src="img/furniture3.jpg" class="card-img-top" alt="...">
+            <img src="furniture3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">KURSI GOYANG</h5>
               <p class="card-text">
@@ -93,7 +93,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card">
-            <img src="img/furniture2.jpg" class="card-img-top" alt="...">
+            <img src="furniture2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">MEJA BUNDAR MEDIUM</h5>
               <p class="card-text">
@@ -115,7 +115,7 @@
       <div class="row mt-5 justify-content-center">
         <div class="col-lg-4">
           <div class="card">
-            <img src="img/Perabot.jpg" class="card-img-top" alt="...">
+            <img src="Perabot.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">MEJA RIAS</h5>
               <p class="card-text">
@@ -128,7 +128,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="img/Perabot2.jpg" class="card-img-top" alt="...">
+            <img src="Perabot2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">KASUR&DIPAN</h5>
               <p class="card-text">
@@ -141,7 +141,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="img/Perabot3.jpg" class="card-img-top" alt="...">
+            <img src="Perabot3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">MEJA KECIL</h5>
               <p class="card-text">
